# Hermes

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  codecov.yml  get_project_name.py
.github/workflows/: coverage.yml  deploy-docs.yml  gcc-release.yml  windows.yml
Hermes/: Logger.h
cmake/: FindSphinx.cmake  coverage.cmake  cppcheck.cmake  sanitizers.cmake
doc/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py  index.rst  references.bib  requirements.txt
doc/_static/: readme.txt
src/: ConsoleSink.cpp  Logger.cpp  dummy.cpp
test/: CMakeLists.txt  test_BasicLogging.cpp  test_Exception.cpp  test_Formatters.cpp  test_Macros.cpp  test_Sinks.cpp
tools/astyle/: astylerc  check_code_style.sh  check_code_style_all.sh  files_to_check_code_style.sh  pre-commit
tools/cppcheck/: CppCheckSuppressions.txt
